Fix bug when pull remote